# COELHONexus

./: .env.example  .gitignore  .gitlab-ci.yml  .woodpecker.yml  README.md  skaffold.yaml  upload_env_to_k3d.py  upload_env_to_k3d.sh
apps/fastapi/: .dockerignore  Dockerfile.fastapi  app.py  celery_app.py  entrypoint.sh  pyproject.toml
apps/fastapi/agents/: adaptive.py  youtube.py
apps/fastapi/api/: __init__.py
apps/fastapi/api/v1/: router.py
apps/fastapi/api/v1/dd/: __init__.py  debug.py  dependencies.py  ingestion.py  pipeline.py  planner.py  resolver.py  runs.py  synth.py
apps/fastapi/api/v1/llm/: __init__.py  health.py  settings.py
apps/fastapi/api/v1/rr/: __init__.py
apps/fastapi/api/v1/ycs/: __init__.py
apps/fastapi/core/: __init__.py  config.py  exceptions.py  logging.py  otel_setup.py
apps/fastapi/core/celery/: __init__.py
apps/fastapi/core/otel/: __init__.py  exporters.py  filters.py  params.py
apps/fastapi/domains/: __init__.py
apps/fastapi/domains/dd/: resolver.py
apps/fastapi/domains/dd/api/: __init__.py  debug.py  ingestion.py  planner.py  (+3 more)
apps/fastapi/domains/rr/: __init__.py  domain.py  entities.py  keys.py  params.py  schemas.py  service.py  task.py  taxonomy.py
apps/fastapi/files/: sources.yaml
apps/fastapi/graphs/: adaptive.py  helpers.py  youtube.py
apps/fastapi/graphs/knowledge/: classical_map.py  distiller.py  helpers.py  hierarchical_synth.py  preview.py  reduce_cluster.py
apps/fastapi/graphs/youtube/: adaptive.py  rag.py
apps/fastapi/infra/: __init__.py
apps/fastapi/infra/celery/: __init__.py  params.py  service.py
apps/fastapi/infra/elasticsearch/: __init__.py  mappings.py  params.py  service.py
apps/fastapi/infra/langfuse/: __init__.py  annotation.py  callbacks.py  client.py  otel.py  prompts.py  scores.py  sessions.py
apps/fastapi/infra/neo4j/: __init__.py  params.py  service.py
apps/fastapi/infra/otel/: baggage.py  exporters.py  litellm_callbacks.py  metrics.py  metrics_registry.py  params.py  service.py
apps/fastapi/infra/qdrant/: __init__.py  params.py  service.py
apps/fastapi/models/: youtube.py
apps/fastapi/routers/v1/: agents.py  tasks.py
apps/fastapi/schemas/: agents.py  graph.py  inputs.py  outputs.py  prompts.py  state.py  structures.py
apps/fastapi/schemas/knowledge/: agents.py  ingestion.py  inputs.py  prompts.py  resolver.py  state.py
apps/fastapi/schemas/youtube/: inputs.py
apps/fastapi/scripts/: __init__.py  youtube_transcript.py
apps/fastapi/services/: cache.py  chunker.py  conversation.py  discovery.py  embeddings.py  grader.py  graph_builder.py  ingestion.py  llm_chain.py  pareto_bandit.py  pareto_drift.py  retriever.py  search_chain.py
apps/fastapi/services/knowledge/: anki.py  cache.py  canonical_url.py  critic_classical.py  crossover.py  debug_runner.py  docs_probe.py  docs_resolver.py  docs_url_resolver.py  embeddings.py  github_ingest.py  ingest_progress.py  ingestion.py  langfuse_client.py  llms_full_ingest.py  llms_txt_ingest.py  markdown_extractor.py  outline_classical.py  pandoc.py  post_ingest.py  refiner_classical.py  registry.py  scope.py  searxng.py  sitemap_ingest.py  storage.py  tier4_httpx.py
apps/fastapi/services/llm/: benchmarks.py  chain.py  discovery.py  otel_metrics.py  otel_setup.py  pareto_bandit.py  pareto_drift.py
apps/fastapi/services/resolver/: __init__.py  catalog.py  convergence.py  depsdev.py  ecosystems.py  liveness.py  llmstxt.py  llmstxt_probe.py  query_splitter.py  search_rotator.py  sources.py
apps/fastapi/services/youtube/: ingestion.py  reranker.py  store.py
apps/fastapi/shared/: sources.yaml
apps/fastapi/tasks/: crawler.py  graph.py  ingestion.py  pipeline.py
apps/fastapi/tasks/docs_distiller/: ingestion.py
apps/fastapi/tasks/knowledge/: distiller.py  export.py  ingestion.py
apps/fastapi/tasks/youtube/: crawler.py  graph.py  ingestion.py  pipeline.py  qdrant.py
apps/fasthtml/: .dockerignore  main.py  proxy.py  pyproject.toml  routes.py  shell.py  tailwind.config.js
apps/fasthtml/components/: base.py  home.py  kd_inspect.py  kd_studies.py  sidebar.py
apps/fasthtml/features/: docs_distiller.py  home.py  settings.py  youtube_content_search.py
apps/fasthtml/features/common/: __init__.py  routes.py
apps/fasthtml/features/dd/: page.py  routes.py
apps/fasthtml/features/docs_distiller/: cache.py  routes.py
apps/fasthtml/features/home/: cache.py  format.py  page.py  routes.py  sections.py  widgets.py
apps/fasthtml/features/rr/: __init__.py  body.py  digest.py  node_details.py  pipeline.py  routes.py  taxonomy.py  toolbar.py
apps/fasthtml/features/settings/: page.py  routes.py
apps/fasthtml/features/ycs/: page.py  routes.py
apps/fasthtml/features/youtube/: routes.py
apps/fasthtml/layout/: __init__.py  head.py  icons.py  shell.py  urls.py
apps/fasthtml/routes/: __init__.py  home.py  kd.py
apps/fasthtml/services/: fastapi_client.py
apps/fasthtml/static/: manifest.json  sw.js
apps/fasthtml/static/css/: app.css  base.css  components.css  home.css  settings.css  tokens.css  youtube.css
apps/fasthtml/static/js/: docs_distiller.js  settings.js  settings_tool_keys.js  topbar.js  youtube_content_search.js
apps/fastmcp/: .dockerignore  Dockerfile.fastmcp  entrypoint.sh  pyproject.toml  server.py
apps/fastmcp/domains/: __init__.py
apps/fastmcp/domains/rr/: __init__.py  server.py
apps/fastmcp/infra/: __init__.py
apps/fastmcp/infra/credentials/: __init__.py  service.py
apps/fastmcp/infra/otel/: __init__.py  exporters.py  filters.py  params.py  service.py
apps/fastmcp/middleware/: __init__.py  ratelimit.py  telemetry.py
apps/fastmcp/scripts/: test_arxiv_local.py
apps_/fasthtml/: entrypoint.sh  pyproject.toml  routes.py
apps_/fasthtml/features/: docs_distiller.py  home.py
apps_/fasthtml/static/js/: docs_distiller.js
zdeprecated/apps/fasthtml/: .dockerignore  main.py  pyproject.toml
zdeprecated/apps/fasthtml/components/: __init__.py  base.py  kd_observability.py  kd_studies.py  map_compare.py
zdeprecated/apps/fasthtml/routes/: kd.py
zdeprecated/apps/fasthtml/services/: fastapi_client.py
(+1546 files in other folders)
