[project]
name = "coelhonexus-fastapi"
version = "1.0.0"
description = "COELHO Nexus - FastAPI base shell"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "httpx",
    "celery[redis]",
    "redis",
    "pyyaml",
    # Ingestion stack
    "beautifulsoup4",                  # HTML parsing for sitemap + tier 4 fallback
    "lxml",                            # fast XML parser for sitemap.xml
    "markdownify",                     # HTML → markdown (tier 3, tier 4 httpx path)
    "markdown-it-py>=3.0",             # token-aware monolith splitter (post-process)
    "mdit-py-plugins>=0.4",            # frontmatter / deflist / footnote tokens
    "tenacity",                        # exponential-backoff retry helper
    "aioboto3>=13.0",                  # async S3 client for MinIO (page-body storage)
    "crawl4ai>=0.8.0,<0.9",            # AsyncUrlSeeder + Playwright-CDP BFS fallback
    # YouTube ingestion stack (services/youtube/) — yt-dlp + PO Token plugin (the
    # legacy stack as of 2026-05; per docs/YCS-MIGRATION-SOTA-2026-05-19.md this
    # also covers transcript extraction via --write-auto-subs, so Playwright CDP
    # is only the fallback tier and is not a hard dependency at v0).
    "yt-dlp",                          # YouTube metadata + auto-subtitle extraction
    "bgutil-ytdlp-pot-provider>=1.3.0",# PO Token plugin (auto-discovered by yt-dlp)
    "curl_cffi>=0.11,<0.15",           # Browser impersonation for yt-dlp (0.15 unsupported)
    "qdrant-client",                   # Qdrant vector DB client (services/youtube/store.py)
    "langchain-text-splitters",        # RecursiveCharacterTextSplitter for transcript chunking
    # LLM rotator stack (services/llm/) — LiteLLM Router + ParetoBandit adaptive routing.
    # litellm PINNED EXACT — v1.82.7/v1.82.8 supply-chain compromised (2026-03-24
    # Trivy CI/CD breach); v1.83.12 AND v1.83.14 ship cost_calculator.py importing
    # `_video_output_cost_per_second` from openai/cost_calculation.py while the
    # symbol is absent from that file (verified by tarball inspection in v1 prod).
    # 1.83.13 is the clean intermediate patch. v1.84.x not yet vetted against the
    # same import-skew checks; stick with the production-validated pin.
    "litellm==1.83.13",
    # langchain-litellm PINNED EXACT — 0.6.4 matches the clean litellm 1.83.x line.
    "langchain-litellm==0.6.4",
    # BYOK credential store (domains/llm/credentials) — Fernet at-rest encryption
    # of user-supplied provider API keys in MinIO. cryptography is the canonical
    # low-footgun Python crypto lib; Fernet = AES-128-CBC + HMAC-SHA256.
    "cryptography>=42",
    "numpy>=1.26,<2.2",                # LinUCB sufficient-statistics matrix algebra
    # Planner cluster node — UMAP dim-reduction + HDBSCAN density clustering.
    # IMPORTANT: hdbscan == scikit-learn-contrib/hdbscan, NOT sklearn.cluster.HDBSCAN
    # (the latter is ~12× slower and missing all_points_membership_vectors(),
    # which the LITA refine step REQUIRES to identify boundary docs by
    # soft-membership probability).
    "umap-learn>=0.5.8",
    "hdbscan>=0.8.43",
    # Rotator deps — now hard deps (were optional/try-except-guarded):
    "rapidfuzz>=3.0",                  # benchmarks L2 model-name canonicalization (token_set_ratio)
    "river>=0.21",                     # ParetoBandit drift detection (ADWIN) in pareto_drift
    # OpenTelemetry — emits LLM call spans to Alloy (gRPC) and LangFuse (HTTP/OTLP).
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    # LangGraph (planner graph + AsyncPostgresSaver checkpointing).
    "langgraph",
    "langgraph-checkpoint-postgres",   # Postgres-backed checkpointer; every super-step writes one row
    "psycopg[binary]",                 # async driver for AsyncPostgresSaver — binary wheel, no libpq needed
    "langchain-core",                  # BaseChatModel + HumanMessage — already pulled transitively but pin for clarity
    # Tokenizer — Rust-backed BPE for byte-exact NIM parity in embed_corpus
    # chunk-boundary math. 3.3 MB wheel vs ~50-60 MB for `transformers`; pure
    # CPU, no torch, no inference, just tokenizer encode/decode.
    # `Tokenizer.from_pretrained(model_id)` loads NIM's own tokenizer.json
    # → exact-count parity with the server. See embed_corpus/service.py.
    "tokenizers>=0.20,<1.0",
]

[tool.uv]
# Resolution override for the litellm namespace collision.
#
# crawl4ai 0.8.6 declares `unclecode-litellm==1.81.13` (described in its own
# METADATA as a "pre-compromise fork of litellm") as a transitive dep. That
# package installs files into the SAME `litellm/` namespace as upstream
# litellm 1.83.13 — both ship `litellm/cost_calculator.py` AND
# `litellm/llms/openai/cost_calculation.py`. uv's install order isn't
# deterministic, so the venv ends up with cost_calculator.py from 1.83.13
# (which imports `_video_output_cost_per_second`) but cost_calculation.py
# from 1.81.13 (which lacks that symbol). Result: ImportError on first
# `import litellm`, blocking app startup. Likely also the cause of the
# `MAX_BASE64_LENGTH_FOR_LOGGING` crash on first deploy (2026-05-16).
#
# Fix: override the transitive `unclecode-litellm` requirement with a marker
# that always evaluates False. uv resolves the override against the real
# environment, the marker is False, and the package is silently skipped.
# crawl4ai's runtime `import litellm` resolves to upstream litellm 1.83.13 —
# upstream API is a strict superset of the fork's 1.81.13 API, so crawl4ai
# behavior is unaffected.
override-dependencies = [
    "unclecode-litellm; python_version >= '99'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyflakes>=3.2.0",
]
