[project]
name = "coelhonexus-fastapi"
version = "1.0.0"
description = "COELHO Nexus - FastAPI base shell"
requires-python = ">=3.13"
dependencies = [
    # Web framework — cap major (1.0 will signal API stability changes)
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",              # v3 is a full rewrite
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<7.0",                 # 5→6 was stable; cap before 7
    "pyyaml>=6.0,<7.0",
    # Ingestion stack
    "beautifulsoup4>=4.12,<5.0",       # HTML parsing for sitemap + tier 4 fallback
    "lxml>=5.0,<7.0",                  # fast XML parser for sitemap.xml
    "markdownify>=0.13,<2.0",          # HTML → markdown (tier 3, tier 4 httpx path)
    "markdown-it-py>=3.0,<4.0",        # token-aware monolith splitter (post-process)
    "mdit-py-plugins>=0.4,<1.0",       # frontmatter / deflist / footnote tokens
    "tenacity>=8.0,<10.0",             # exponential-backoff retry helper
    "aioboto3>=13.0,<15.0",            # async S3 client for MinIO (page-body storage)
    "crawl4ai>=0.8.0,<0.9",            # AsyncUrlSeeder + Playwright-CDP BFS fallback
    # YouTube ingestion stack (services/youtube/) — yt-dlp + PO Token plugin (the
    # legacy stack as of 2026-05; per docs/YCS-MIGRATION-SOTA-2026-05-19.md this
    # also covers transcript extraction via --write-auto-subs, so Playwright CDP
    # is only the fallback tier and is not a hard dependency at v0).
    # CVE-2026-26331 (RCE via `--netrc-cmd`) is patched in 2026.02.21.
    # We don't use `--netrc-cmd`, but pinning the floor at the patched
    # release closes the audit alert with no downside (yt-dlp is rolling
    # so the version bump just tracks upstream).
    "yt-dlp>=2026.02.21",              # date-versioned; rolling release
    "bgutil-ytdlp-pot-provider>=1.3.0,<2.0",
    "curl_cffi>=0.11,<0.15",           # Browser impersonation for yt-dlp (0.15 unsupported)
    # Playwright async client — connects to the in-cluster `playwright-headed`
    # CDP sidecar at port 9222 to DOM-scrape YouTube transcripts (YouTube blocks
    # headless and yt-dlp subtitle paths 429 on rate limit). Chromium ships in
    # the sidecar image; this dep only needs the Python client library
    # (no `playwright install`). See Wave 4 of docs/YCS-PORT-PLAN-2026-06-06.md.
    "playwright>=1.40,<2.0",
    "qdrant-client>=1.10,<2.0",        # Qdrant vector DB client (services/youtube/store.py)
    # langchain-text-splitters 1.x — required for langchain-core 1.x
    # compat. Pre-1.0 releases are pinned against langchain-core<1.0
    # which conflicts with our >=1.2.21 floor.
    "langchain-text-splitters>=1.1,<2.0",
    # YCS persistence layer (Wave 2 of docs/YCS-PORT-PLAN-2026-06-06.md):
    # Elasticsearch holds video metadata + transcripts (deprecated indexes
    # `coelhonexus-youtube-metadata` + `-transcriptions`); Neo4j holds the
    # entity-knowledge-graph (Video / Channel / Entity / Relationship nodes).
    # langchain_neo4j provides `Neo4jGraph` for LLMGraphTransformer + entity
    # retrieval. flashrank is the deprecated cross-encoder reranker.
    "elasticsearch[async]>=8,<9",
    "neo4j>=5,<6",
    "langchain_neo4j>=0.1,<1.0",
    "flashrank>=0.2,<1.0",
    # FastEmbedSparse BM25 wrapper used by YCS embeddings. langchain-qdrant
    # 1.x — required for langchain-core 1.x compat; pre-1.0 releases pin
    # langchain-core<1.0 which conflicts with our >=1.2.21 floor.
    "langchain-qdrant>=1.1,<2.0",
    # `fastembed` runs the local BM25 sparse encoder behind FastEmbedSparse.
    # langchain-qdrant 1.x does NOT pull it in transitively (it's an
    # optional extra), so the FastAPI image was 5xx-ing on retriever init
    # with `ValueError: The 'fastembed' package is not installed.` Pin
    # the CPU build explicitly. Phase B Qdrant ingest + /agents/search
    # both need this. fastembed-gpu is the CUDA variant we do NOT want
    # (no GPU in COELHO Cloud per the no-inference rule).
    "fastembed>=0.4,<1.0",
    "langchain-experimental>=0.3,<1.0", # LLMGraphTransformer for YCS graph_builder
    # ChatOpenAI client used as the 13-model `with_fallbacks` chain that powers
    # the YCS agents router + neo4j ingestion task (Groq+NIM behind OpenAI-
    # compatible endpoints). Deprecated pinned 1.1.10; floor matches.
    "langchain-openai>=1.1,<2.0",
    # LLM rotator stack (services/llm/) — LiteLLM Router + ParetoBandit adaptive routing.
    # litellm PINNED EXACT — v1.82.7/v1.82.8 supply-chain compromised (2026-03-24
    # Trivy CI/CD breach); v1.83.12 AND v1.83.14 ship cost_calculator.py importing
    # `_video_output_cost_per_second` from openai/cost_calculation.py while the
    # symbol is absent from that file (verified by tarball inspection in v1 prod).
    # 1.83.13 is the clean intermediate patch. v1.84.x not yet vetted against the
    # same import-skew checks; stick with the production-validated pin.
    "litellm==1.83.13",
    # langchain-litellm PINNED EXACT — 0.6.4 matches the clean litellm 1.83.x line.
    "langchain-litellm==0.6.4",
    # BYOK credential store (domains/llm/credentials) — Fernet at-rest encryption
    # of user-supplied provider API keys in MinIO. cryptography is the canonical
    # low-footgun Python crypto lib; Fernet = AES-128-CBC + HMAC-SHA256.
    # Floor 46.0.7 patches CVE-2026-39892 (buffer overflow when non-contiguous
    # Python buffers are passed to wheel-side APIs) + CVE-2026-26007 (binary-
    # curve private-key leakage on uncommon SECT* curves). Cap raised to <49
    # so uv can pick 48.0.0 (ships OpenSSL 3.5.6 + additional name-constraints
    # fix for wildcard DNS SAN leafs). langchain-litellm 0.6.4 floor is 46.0.5.
    "cryptography>=46.0.7,<49",
    "numpy>=1.26,<2.2",                # LinUCB sufficient-statistics matrix algebra
    # Rotator deps — now hard deps (were optional/try-except-guarded):
    "rapidfuzz>=3.0,<4.0",             # benchmarks L2 model-name canonicalization (token_set_ratio)
    # `json-repair` is the parser LangChain's LLMGraphTransformer uses
    # on its `ignore_tool_usage=True` path (the cross-provider
    # compatibility shipment). The unstructured path emits JSON in
    # plain-text responses; weaker models leak trailing commas / unclosed
    # quotes / etc., and json_repair.loads() tolerates them. Without
    # this dep, LLMGraphTransformer raises ImportError at first call.
    "json-repair>=0.30,<1.0",
    "river>=0.21,<1.0",                # ParetoBandit drift detection (ADWIN) in pareto_drift
    # OpenTelemetry — emits LLM call spans to Alloy (gRPC) and LangFuse (HTTP/OTLP).
    # Stable APIs capped before 2.0; instrumentation packs pre-1.0 capped before 1.0.
    "opentelemetry-api>=1.30,<2.0",
    "opentelemetry-sdk>=1.30,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<1.0",
    "opentelemetry-instrumentation-httpx>=0.50b0,<1.0",
    "opentelemetry-instrumentation-redis>=0.50b0,<1.0",
    "opentelemetry-instrumentation-celery>=0.50b0,<1.0",
    "opentelemetry-instrumentation-logging>=0.50b0,<1.0",
    # BaggageSpanProcessor — propagates allow-listed baggage entries (study_id,
    # channel_id, digest_id, etc.) onto every child span without kwargs
    # threading. The recommended pattern per LiteLLM/LangFuse docs. Package is
    # versioned alongside the instrumentation packs (0.5x → 0.6x).
    "opentelemetry-processor-baggage>=0.50b0,<1.0",
    # LangFuse v3 SDK — for SDK-only features (prompt management, sessions,
    # scores, datasets, evals). Trace ingestion already flows via OTLP from
    # infra/otel/exporters.py; the SDK is the second surface only. v3 is the
    # OTLP-native major; v2 used a different ingestion shape.
    "langfuse>=3,<4",
    # LangGraph 1.0 (Oct 2026) is GA with ZERO breaking changes — the only
    # deprecation is `langgraph.prebuilt` moving to `langchain.agents`, which
    # our code doesn't import (it's a transitive dep only). Same for the
    # checkpoint package, which jumped to 3.x alongside the langgraph 1.x
    # core. See https://changelog.langchain.com/announcements/langgraph-1-0-...
    "langgraph>=1.2,<2.0",             # floor bumped: 1.2.x needs langgraph-checkpoint>=4.1 + langchain-core>=1.4
    "langgraph-checkpoint-postgres>=3.1,<4.0",   # 3.1.0 is the version that requires (and supplies) langgraph-checkpoint>=4.1 compat;
                                                  # earlier 3.0.x still pulls 3.x checkpoint serde → AIMessage msgpack TypeError when paired with langgraph 1.2
    "psycopg[binary]>=3.2,<4.0",       # async driver for AsyncPostgresSaver — binary wheel, no libpq needed
    "langchain-core>=1.4,<2.0",        # floor bumped: deepagents 0.6 + langgraph 1.2 require >=1.4; langchain-litellm 0.6.4 floor (>=1.2.21) is satisfied by 1.4.x
    # Research Radar agent stack (domains/rr/agent/) — DeepAgents orchestrator
    # + LangChain-compatible MCP tool adapter.
    # • deepagents 0.6.x ships the async-subagent + virtual-FS features
    #   the architecture doc relies on; needs langchain-core>=1.4 (above).
    # • langchain-mcp-adapters 0.3.x is the latest stable, wraps remote
    #   MCP tools as LangChain BaseTool for DeepAgents subagent tool lists.
    #   Pulls `mcp>=1.9` transitively as the MCP client.
    "deepagents>=0.6,<1.0",
    "langchain-mcp-adapters>=0.3,<1.0",
    # Tokenizer — Rust-backed BPE for byte-exact NIM parity in embed_corpus
    # chunk-boundary math. 3.3 MB wheel vs ~50-60 MB for `transformers`; pure
    # CPU, no torch, no inference, just tokenizer encode/decode.
    # `Tokenizer.from_pretrained(model_id)` loads NIM's own tokenizer.json
    # → exact-count parity with the server. See embed_corpus/service.py.
    "tokenizers>=0.20,<1.0",
]

[tool.uv]
# Resolution override for the litellm namespace collision.
#
# crawl4ai 0.8.6 declares `unclecode-litellm==1.81.13` (described in its own
# METADATA as a "pre-compromise fork of litellm") as a transitive dep. That
# package installs files into the SAME `litellm/` namespace as upstream
# litellm 1.83.13 — both ship `litellm/cost_calculator.py` AND
# `litellm/llms/openai/cost_calculation.py`. uv's install order isn't
# deterministic, so the venv ends up with cost_calculator.py from 1.83.13
# (which imports `_video_output_cost_per_second`) but cost_calculation.py
# from 1.81.13 (which lacks that symbol). Result: ImportError on first
# `import litellm`, blocking app startup. Likely also the cause of the
# `MAX_BASE64_LENGTH_FOR_LOGGING` crash on first deploy (2026-05-16).
#
# Fix: override the transitive `unclecode-litellm` requirement with a marker
# that always evaluates False. uv resolves the override against the real
# environment, the marker is False, and the package is silently skipped.
# crawl4ai's runtime `import litellm` resolves to upstream litellm 1.83.13 —
# upstream API is a strict superset of the fork's 1.81.13 API, so crawl4ai
# behavior is unaffected.
override-dependencies = [
    "unclecode-litellm; python_version >= '99'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyflakes>=3.2,<4.0",
]
