[project]
name = "coelhonexus-fasthtml"
version = "1.0.0"
description = "COELHO Nexus - FastHTML web frontend (HTMX-driven, server-rendered)"
requires-python = ">=3.13"
dependencies = [
    # FastHTML — Answer.AI's HTMX-first server-rendered framework. Pulls
    # Starlette + Uvicorn + fastcore + python-fasthtml itself transitively.
    "python-fasthtml>=0.12,<0.14",
    # httpx — async HTTP client used for the FastAPI reverse-proxy + /api/test
    # health probe. Same library FastAPI's app.py uses, keeps mental model 1:1.
    "httpx>=0.27,<0.28",
    # uvicorn[standard] — adds httptools, uvloop, watchfiles, websockets.
    # watchfiles enables --reload-include / --reload-exclude (uvicorn falls
    # back to StatReload otherwise). Same as apps/fastapi.
    "uvicorn[standard]>=0.32,<0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
